testsuite/poke.pkl/ass-diag-9.pk
/* { dg-do compile } */

type Foo2 =
  struct
  {
    fun qqq = void:
      {
        var rs = "foo";
        rs[0] = 'x'; /* { dg-error "invalid l-value" } */
      }
  };
